--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* BUG livrée par défaut, sur compte Lachaussette FX17 : il n'a pas acheté la voiture donc obligatoirement il ne possède pas la livrée.
 * Sur le "?", ajouter tooltip explicatif et click->lien boutique.
 * Pas d'affichage des voitures qui ne sont plus au magasin, comme la RUF. Elle est quand même listée dans les purchases, voir si on peut en faire quelque chose, éventuellement en réutilisant r3e_data.json.
 * Pas possible de déterminer si on possède la livrée par défaut d'une voiture, sauf par déduction si on a une voiture avec aucune livrée.
