--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
-* Click sur "aucun profil utilisé" -> affiche le splash. Idem quand l'url n'a pas de GET utilisables.
+* Faire des tests de temps d'exécution des requêtes SQL avec le nombre d'utilisateurs grandissant.
+* Afficher le splash quand l'url n'a pas de GET utilisables.
 * Sur le "?", ajouter tooltip explicatif et click->lien boutique.
 * Pas d'affichage des voitures qui ne sont plus au magasin, comme la RUF. Elle est quand même listée dans les purchases, voir si on peut en faire quelque chose, éventuellement en réutilisant r3e_data.json.
 * Le magasin ne nous dit pas si on possède la livrée par défaut d'une voiture.
