--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 * Faire des tests de temps d'exécution des requêtes SQL avec le nombre d'utilisateurs grandissant.
 * Afficher le splash quand l'url n'a pas de GET utilisables.
+* session php pour ne pas avoir à revérifier le profil à chaque rechargement ?
 * Sur le "?", ajouter tooltip explicatif et click->lien boutique.
 * Pas d'affichage des voitures qui ne sont plus au magasin, comme la RUF. Elle est quand même listée dans les purchases, voir si on peut en faire quelque chose, éventuellement en réutilisant r3e_data.json.
 * Le magasin ne nous dit pas si on possède la livrée par défaut d'une voiture.
+
+== Pour JF :
+* Bug dans leur outil de recherche ? -> http://game.raceroom.com/search?query=aribo&json -> trouve Stephane Baud, mais une recherche sur Stephane n'affiche rien.
