--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@
 * Afficher le splash quand l'url n'a pas de GET utilisables.
 * session php pour ne pas avoir à revérifier le profil à chaque rechargement ?
 * Sur le "?", ajouter tooltip explicatif et click->lien boutique.
+* anglais
+* mobile : en vertical les images dépassent, si on dézoom le header réduit, tester overflow.
 * Pas d'affichage des voitures qui ne sont plus au magasin, comme la RUF. Elle est quand même listée dans les purchases, voir si on peut en faire quelque chose, éventuellement en réutilisant r3e_data.json.
 * Le magasin ne nous dit pas si on possède la livrée par défaut d'une voiture.
 
