--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
+* check input : $file = filter_input(INPUT_GET, 'file', FILTER_SANITIZE_SPECIAL_CHARS);
 * click maison puis retour arrière -> check profile -> pourquoi ?
-* Faire des tests de temps d'exécution des requêtes SQL avec le nombre d'utilisateurs grandissant.
 * Afficher le splash quand l'url n'a pas de GET utilisables.
 * session php pour ne pas avoir à revérifier le profil à chaque rechargement ?
 * Sur le "?", ajouter tooltip explicatif et click->lien boutique.
